[package]
name = "libsumatracrypt-rs"
authors = ["silene0259"]
version = "0.4.0"
description = "A Rust Library For Cryptography"
keywords = ["crypto","cryptography","encryption","digest","signature"]
categories = ["cryptography"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Silene0259/libsumatracrypt-rs"
repository = "https://github.com/Silene0259/libsumatracrypt-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new-rand = {package = "rand", version="0.8.5"}

rand = "0.7.3"
ecies-ed25519 = {version = "0.5.1", optional=true}
rsa = { version = "0.9.6", features = ["sha2","pem"], optional=true }

zeroize = "1.8.1"


# CSPRNG
getrandom = "0.2.14"

# Encoding
base32 = "0.5.0"
hex = "0.4.3" 
bs58 = "0.5.1"

# Digest
blake3 = {version = "1.5.1", optional = true}
blake2-rfc = {version = "0.2.18", optional = true}
sha2 = {version="0.10.8", optional = true}
tiny-keccak = { version = "2.0.2", features = ["sha3","shake"], optional= true }
sha1 = {version = "0.10.6", optional=true}


# Signature
schnorrkel = {version = "0.11.4", optional=true}
ed25519-dalek = {version="2.0.0-rc.3", optional=true}
ed448-goldilocks-plus = {version="0.11.2", optional=true}

# DH (Key-Exchange)
x448 = {version="0.6.0", optional=true}

serde = { version = "1.0", features = ["derive"]}


pqcrypto-traits = "0.3.5"

# Post-Quantum Signatures
pqcrypto-sphincsplus = "0.7.0"
pqcrypto-dilithium = "0.5.0"
pqcrypto-falcon = "0.3.0"

[features]
default = ["digests","signatures","encryption","dh"]

digests = ["blake3","blake2-rfc","sha2","tiny-keccak","sha1"]
signatures = ["schnorrkel","ed25519-dalek","ed448-goldilocks-plus"]
encryption = ["rsa","ecies-ed25519"]
dh = ["x448"]
