[package]
name = "libsumatracrypt-rs"
authors = ["silene0259"]
version = "0.6.1"
description = "A Rust Library For Cryptography"
keywords = ["crypto","cryptography","encryption","digest","signature"]
categories = ["cryptography"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/Silene0259/libsumatracrypt-rs"
repository = "https://github.com/Silene0259/libsumatracrypt-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
new-rand = {package = "rand", version="0.8.5"}

rand = "0.7.3"
ecies-ed25519 = {version = "0.5.1", optional=true}
rsa = { version = "0.9.7", features = ["sha2","pem"], optional=true }

zeroize = { version = "1.8.1", features=["derive"]}


# CSPRNG
getrandom = "0.2.14"

# Encoding
base32 = "0.5.0"
hex = "0.4.3" 
bs58 = "0.5.1"

# SecureEncoding
subtle-encoding = "0.5.1"

# Digest
blake3 = {version = "1.5.5", optional = true}
blake2-rfc = {version = "0.2.18", optional = true}
sha2 = {version="0.10.8", optional = true}
tiny-keccak = { version = "2.0.2", features = ["sha3","shake"], optional= true }
sha1 = {version = "0.10.6", optional=true}


# Signature
schnorrkel = {version = "0.11.4", optional=true}
ed25519-dalek = {version="2.1.1", optional=true}
ed448-goldilocks-plus = {version="0.13.2", optional=true}
# BLS Aggregate Signatures
bls-signatures = "0.15.0"

# DH (Key-Exchange)
x448 = {version="0.6.0", optional=true}

serde = { version = "1.0", features = ["derive"]}


pqcrypto-traits = { version = "0.3.5", optional=true}

# Post-Quantum Signatures
pqcrypto-sphincsplus = { version = "0.7.0", optional=true}
pqcrypto-dilithium = {version= "0.5.0", optional=true}
pqcrypto-falcon = { version= "0.4.0", optional=true}

pqc_kyber = {version = "0.7.1", features = ["kyber1024", "zeroize"]}
#safe_pqc_kyber = {version = "0.6.3", features=["kyber1024"]}
chacha20poly1305 = "0.10.1"

# BIP39
bip39 = {version = "2.1.0", features=["zeroize","all-languages"]}

# Errors
thiserror = "2.0.0"

[features]
default = ["digests","signatures","encryption","dh","pq"]

digests = ["blake3","blake2-rfc","sha2","tiny-keccak","sha1"]
signatures = ["schnorrkel","ed25519-dalek","ed448-goldilocks-plus"]
encryption = ["rsa","ecies-ed25519"]
dh = ["x448"]
pq = ["pqcrypto-traits","pqcrypto-dilithium","pqcrypto-falcon","pqcrypto-traits"]
